@@ -15,6 +15,7 @@ import org.bukkit.inventory.meta.SkullMeta;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.util.Arrays;
 import java.util.Base64;
 import java.util.UUID;
 
@@ -72,9 +73,9 @@ public class URLSkullBuilder {
         return uuid.replaceAll("(\\w{8})(\\w{4})(\\w{4})(\\w{4})(\\w{12})", "$1-$2-$3-$4-$5");
     }
 
-    private String readURL(String[] url) {
+    private String readURL(String url) {
         try {
-            Process process = Runtime.getRuntime().exec("curl " + url[0]);
+            Process process = Runtime.getRuntime().exec(new String[]{"curl ", url});
             InputStreamReader inputStreamReader = new InputStreamReader(process.getInputStream());
             BufferedReader bufferedReader = new BufferedReader(inputStreamReader);
             StringBuilder line = new StringBuilder();
@@ -91,14 +92,14 @@ public class URLSkullBuilder {
     }
 
     private String cacheUserByName(String name) {
-        String url1 = readURL(new String[]{"https://api.minetools.eu/uuid/" + name});
+        String url1 = readURL("https://api.minetools.eu/uuid/" + name);
         if (url1 != null) {
             Object json = PARSER.parse(url1);
             JsonObject object = (JsonObject) json;
             JsonElement uuidElement = object.get("id");
             if (uuidElement.getAsString().equals("null")) return null;
             String uuid = convertUUID(uuidElement.getAsString());
-            String url = readURL(new String[]{"https://api.minetools.eu/profile/" + uuid.replace("-", "")});
+            String url = readURL("https://api.minetools.eu/profile/" + uuid.replace("-", ""));
             if (url != null) {
                 json = PARSER.parse(url);
                 object = (JsonObject) json;
